<resources>
    <string name="app_name">PopularMovieApp</string>
    <string name="most_popular_str">Most Popular</string>
    <string name="highest_rate_str">Highest Rate</string>
    <string name="favorites">Favorites</string>
    <string name="progress_dialog_loading">Loading...</string>
    <string name="no_network_message">Network currently not available</string>
    <string name="close">Close</string>
    <string name="release_date">Release date</string>
    <string name="overview">Overview</string>
    <string name="rate">Average rate</string>
    <string name="added_to_favorites">Movie added to favorites</string>
    <string name="removed_from_favorites">Movie removed from favorites</string>
    <string name="share">Share</string>
    <string name="share_trailer">Share the Movie Trailer</string>
    <string name="dont_show_again">Do not show again</string>
    <string name="settings">Settings</string>
    <string name="sort_by">Sort By</string>
    <string name="most_popular">popular</string>
    <string name="top_rated">top_rated</string>
    <string name="title_activity_settings">Settings</string>
    <string name="error_loading_trailer">Error while loading movie trailers</string>
    <string name="error_loading_reviews">Error while loading movie reviews</string>
    <string name="check_box_preference_title" translatable="true">Hide dialogs</string>
    <string name="check_box_preference_key">hide_dialogs</string>
    <string name="sort_movie_by">Sort moviesFetchList by</string>
    <string name="sort_criterium">sort_criterium</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="no_favorite_available">No Favorites Found</string>
    <string name="no_movie_available">No Movies Found</string>
</resources>
