<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/settings"
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_white_24dp"
        app:showAsAction="ifRoom"
        android:orderInCategory="100"
        android:title="@string/sort_by">

        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:title="@string/most_popular_str"
                    android:id="@+id/most_popular"
                    app:showAsAction="never" />

                <item
                    android:title="@string/highest_rate_str"
                    android:id="@+id/highest_rate"
                    app:showAsAction="never" />

                <item
                    android:title="@string/favorites"
                    android:id="@+id/favorites"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>

</menu>